--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         </div>
         <div class="container-1">
             <div class="vertical-center">
-              <a href = "mailto:buttu.screativework@gmail.com?subject = Feedback&body = Message" class="btn-1">
+              <a href = "mailto:buttu.screativework07@gmail.com?subject = Feedback&body = Message" class="btn-1">
                     Send DM </a>
             </div>
           </div>
