--- a/index.html
+++ b/index.html
@@ -44,7 +44,13 @@
             <img src="./assests/aari.jpg" alt="Product 3">
             <h2>Aari Works</h2>
             <p></p>
-            <p>Price: ₹1500</p>
+            <p>Starting Price: ₹1500</p>
+        </div>
+        <div class="product">
+            <img src="./assests/bangle.jpg" alt="Product 4">
+            <h2>silk thread bangle</h2>
+            <p></p>
+            <p>Starting Price: ₹300 </p>
         </div>
         <div class="container-1">
             <div class="vertical-center">
