--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <p>Starting Price: ₹1500</p>
         </div>
         <div class="product">
-            <img src="./assests/bangle.jpg" alt="Product 4">
+            <img src="./assests/20231007_211736.jpg" alt="Product 4">
             <h2>silk thread bangle</h2>
             <p></p>
             <p>Starting Price: ₹300 </p>
