--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         </div>
         <div class="product">
             <img src="./assests/20231007_211736.jpg" alt="Product 4">
-            <h2>silk thread bangle</h2>
+            <h2>silk thread bangles</h2>
             <p></p>
             <p>Starting Price: ₹300 </p>
         </div>
