--- a/index.html
+++ b/index.html
@@ -34,6 +34,14 @@
             <h2>Simple Mehandi</h2>
             <p>Price: ₹200</p>
         </div>
+
+          <div class="product">
+            <img src="./assests/20231007_211736.jpg" alt="Product 4">
+            <h2>Silk-Thread Bangles</h2>
+            <p></p>
+            <p>Price: ₹300 </p>
+        </div>
+        
         <div class="product">
             <img src="./assests/bridal.jpg" alt="Product 2">
             <h2>Bridal Mehandi</h2>
@@ -43,15 +51,9 @@
         <div class="product">
             <img src="./assests/aari.jpg" alt="Product 3">
             <h2>Aari Works</h2>
-            <p></p>
-            <p>Starting Price: ₹1500</p>
+            <p>Price: ₹1500</p>
         </div>
-        <div class="product">
-            <img src="./assests/20231007_211736.jpg" alt="Product 4">
-            <h2>silk thread bangles</h2>
-            <p></p>
-            <p>Starting Price: ₹300 </p>
-        </div>
+      
         <div class="container-1">
             <div class="vertical-center">
               <a href = "mailto:buttu.screativework07@gmail.com?subject = Feedback&body = Message" class="btn-1">
