--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <div class="product">
             <img src="./assests/aari.jpg" alt="Product 3">
             <h2>Aari Works</h2>
-            <p>Price: ₹1500</p>
+            <p>Starting Price: ₹800</p>
         </div>
       
         <div class="container-1">
