--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             
         </div>
         <div class="product">
-            <img src="./assests/aari.jpg" alt="Product 3">
+            <img src="./assests/20231209_160740~2.jpg" alt="Product 3">
             <h2>Aari Works</h2>
             <p>Starting Price: ₹800</p>
         </div>
