--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </nav>
         <div class="bio">
             <h1 id="name">This is Trilo ❤</h1>
-            <p id="bio">I can do Mehandi/Aari for just about any occasion<br> OWN & STYLE (Your Design)</p>
+            <p id="bio">I can do Mehandi/Aari/all thread works for just about any occasion and can customize your favorites<br> OWN & STYLE (Your Design)</p>
             <p id ="cost">(For Affordable Cost)</p>
             <a href="https://www.instagram.com/buttus_.creative._work/#" target="_blank" class="btn">Visit US (Instagram)</a>
         </div>
@@ -39,7 +39,7 @@
             <img src="./assests/20231007_211736.jpg" alt="Product 4">
             <h2>Silk-Thread Bangles</h2>
             <p></p>
-            <p>Price: ₹300 </p>
+            <p>Starting Price: ₹150 </p>
         </div>
         
         <div class="product">
