--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <h1 id="name">This is Trilo ❤</h1>
             <p id="bio">I can do Mehandi/Aari/all thread works for just about any occasion and can customize your favorites<br> OWN & STYLE (Your Design)</p>
             <p id ="cost">(For Affordable Cost)</p>
-            <a href="https://www.instagram.com/buttus_.creative._work/#" target="_blank" class="btn">Visit US (Instagram)</a>
+            <a href="https://www.buttu.screativework07@gmail.com/buttus_.creative._work/#" target="_blank" class="btn">place your orders at (mail)</a>
         </div>
     </section>
 
