--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
             <a href="./index.html"><img src="./assests/logo.png"></a>
         </nav>
         <div class="bio">
-            <h1 id="name">This is Trilo ❤</h1>
+            <h1 id="greeting">Hello guys !!!</h1>
+            <h1 id="name">This is Trilo ☺️</h1>
             <p id="bio">I can do Mehandi/Aari/all thread works for just about any occasion and can customize your favorites<br> OWN & STYLE (Your Design)</p>
             <p id ="cost">(For Affordable Cost)</p>
         </div>
