--- a/index.html
+++ b/index.html
@@ -53,6 +53,12 @@
             <h2>Aari Works</h2>
             <p>Starting Price: ₹800</p>
         </div>
+
+        <div class="product">
+            <img src="./assests/Screenshot_20240102_190522_Chrome.jpg" alt="Product 5">
+            <h2>SilkThread Necklace</h2>
+            <p>Starting Price: ₹250</p>
+        </div>
       
         <div class="container-1">
             <div class="vertical-center">
