--- a/index.html
+++ b/index.html
@@ -59,6 +59,12 @@
             <h2>SilkThread Necklace</h2>
             <p>Starting Price: ₹250</p>
         </div>
+
+        <div class="product">
+            <img src="./assests/Screenshot_20240102_190522_Chrome.jpg" alt="Product 6">
+            <h2>SilkThread Earrings</h2>
+            <p>Starting Price: ₹160</p>
+        </div>
       
         <div class="container-1">
             <div class="vertical-center">
