--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </header>
     <div class="container">
         <div class="product">
-            <img src="./assests/hand-1.jpg" alt="Product 1">
+            <img src="./assests/Snapchat-929548144.jpg" alt="Product 1">
             <h2>Simple Mehandi</h2>
             <p>Price: ₹200</p>
         </div>
