--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="bio">
             <h1 id="greeting">Hello guys !!!</h1>
             <h1 id="name">This is Trilo ☺️</h1>
-            <p id="bio">I can do Mehandi/Aari/all thread works for just about any occasion and can customize your favorites<br> OWN & STYLE (Your Design)</p>
+            <p id="bio">I can do Mehandi/Aari/all thread works for any occasion and can customize your favorites<br> OWN & STYLE (Your Design)</p>
             <p id ="cost">(For Affordable Cost)</p>
         </div>
     </section>
@@ -43,7 +43,7 @@
         </div>
         
         <div class="product">
-            <img src="./assests/bridal.jpg" alt="Product 2">
+            <img src="./assests/Snapchat-258925815.jpg" alt="Product 2">
             <h2>Bridal Mehandi</h2>
             <p>Price: ₹500</p>
             
