--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         </div>
 
         <div class="product">
-            <img src="./assests/IMG_20240104_194735.jpg" alt="Product 6">
+            <img src="./assests/IMG_20240104_194735~2.jpg" alt="Product 6">
             <h2>SilkThread Earrings</h2>
             <p>Starting Price: ₹150</p>
         </div>
